--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>自己紹介ワイヤーフレーム</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Corben:700" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#Navbar">
 
     <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="Navbar"class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,41 +20,44 @@
     <!-- <a class="navbar-brand" href="#!">MENU</a> -->
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto mt-2 mt-md-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#home">Home</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#!">About</a>
+          <a class="nav-link" href="#about-skill">About</a>
         </li>
-        
 
         <li class="nav-item">
-          <a class="nav-link" href="#!">Hobby</a>
+          <a class="nav-link" href="#hobby">Hobby</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" href="#!">Contact</a>
+          <a class="nav-link" href="#want-challenge">Want</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
   <!-- NavBar -->
 
-  <!-- name -->
+<div class="container">
 
-  <div class="bg01">
-    <div class="name">
-      <h1>Hiroaki Nishizawa</h1>
-      <h2>Welcom To My Homepage</h2>
+  <!-- name -->
+  <div class="row">
+    <div class="col-12">
+      <h1 id="home" class="text-center display-1">Hiroaki Nishizawa</h1>
     </div>
-    <div class="contact-icon">
-      <i class="fab fa-facebook-square fa-4x" aria-hidden="true"></i>
+    <div class="col-12">
+      <h2 class="text-center display-4">Welcome To My Homepage</h2>
     </div>
-    <div class="contact-icon">
-      <i class="fab fa-twitter-square fa-4x" aria-hidden="true"></i>
-    </div>
-    <div class="contact-icon">
-      <i class="fab fa-blogger fa-4x" aria-hidden="true"></i>
+    <div class="col-12 text-right">
+      <i class="fab fa-facebook-square fa-3x mr-2" aria-hidden="true"></i>
+      <i class="fab fa-twitter-square fa-3x mr-2" aria-hidden="true"></i>
+      <i class="fab fa-blogger fa-3x" aria-hidden="true"></i>
     </div>
   </div>
 
@@ -62,57 +65,57 @@
 
   <!-- about&skill -->
 
-  <div class="bg02">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="about col-xs-12 col-md-6 ">
-          <h1>About</h1>
-            <p>エンジニアとしては未経験ですが、<br>
-              現在プログラミングスクールにてHTML・CSS・PHPを中心に学習中です。<br>
-              また、Wordpressにて個人ブログも運営しています。<br>
-              本業では新卒で専門商社に入社して以降、営業に携わっています。<br>
-              数年間従事した後に1度の転職を経た後、<br>
-              製薬メーカーでの営業職であるMR(Medical Representative)として、<br>
-              医療機関で主に医師を対象に営業活動を行っております。<br>
-              学生時代は競技ダンス(社交ダンス)を4年間続けました。<br>
-              今でもちょっとなら踊れます！
-            </p>
+  <div class="row">
+    <div class="col-xs-12 col-md-6 mt-5">
+      <h1 id="about-skill">About</h1>
+        <p class="mt-3">エンジニアとしては未経験ですが、<br>
+          現在プログラミングスクールにてHTML・CSS・PHPを中心に学習中です。<br>
+          また、Wordpressにて個人ブログも運営しています。<br>
+          本業では新卒で専門商社に入社して以降、営業に携わっています。<br>
+          数年間従事した後に1度の転職を経た後、<br>
+          製薬メーカーでの営業職であるMR(Medical Representative)として、<br>
+          医療機関で主に医師を対象に営業活動を行っております。<br>
+          非常に多忙なお医者様とコミュニケーションの中からニーズをお聞きし、<br>
+          情報提供活動をしています。<br>
+          学生時代は競技ダンス(社交ダンス)を4年間続けました。<br>
+          周囲の状況を確認しつつ、常にパートナー（他者）のことを考えなければならない競技です。<br>
+          大分鈍りましたが、今でもちょっとなら踊れます！
+        </p>
+    </div>
+
+    <div class="col-xs-12 col-md-6 mt-5">
+      <h1 id="skill">Skill</h1>
+      <p class="mt-3">☆HTML・CSSコーディング / PHP /  Docker / Bootstrap4 / Wordpress制作・導入☆<br>
+      ☆コミュニケーションスキル / ヒアリングスキル / 顧客志向 from 営業☆<br>
+      ☆周囲を見るスキル / 他者と協調・調和するスキル from 競技ダンス☆
+      </p>
+
+      <div class="row justify-content-center">
+        <div class="col">
+          <i class="fab fa-html5 fa-3x" aria-hidden="true"></i>
+          <p class="text-center">HTML5</p>
         </div>
 
-        <div class="skill col-xs-12 col-md-6 ">
-          <h1>Skill</h1>
-          <p>☆HTML・CSSコーディング / PHP /  Docker / Bootstrap4 / Wordpress制作・導入☆<br>
-          ☆コミュニケーションスキル / ヒアリングスキル / 顧客志向 from 営業☆<br>
-          ☆周囲を見るスキル / 他者と協調・調和するスキル from 競技ダンス☆
-          </p>
-          <div class="icon">
-            <div class="skill-icon">
-              <i class="fab fa-html5 fa-4x" aria-hidden="true"></i>
-              <p>HTML5</p>
-            </div>
+        <div class="col">
+          <i class="fab fa-css3-alt fa-3x " aria-hidden="true"></i>
+          <p class="text-center">CSS3</p>
+        </div>
 
-            <div class="skill-icon">
-              <i class="fab fa-css3-alt fa-4x" aria-hidden="true"></i>
-              <p>CSS3</p>
-            </div>
+        <!-- <i class="fab fa-bootstrap fa-5x" aria-hidden="true"></i> -->
 
-            <!-- <i class="fab fa-bootstrap fa-5x" aria-hidden="true"></i> -->
+        <div class="col">
+          <i class="fab fa-php fa-3x" aria-hidden="true"></i>
+          <p class="text-center">PHP</p>
+        </div>
 
-            <div class="skill-icon">
-              <i class="fab fa-php fa-4x" aria-hidden="true"></i>
-              <p>PHP</p>
-            </div>
+        <div class="col">
+          <i class="fab fa-docker fa-3x" aria-hidden="true"></i>
+          <p class="text-center">Docker</p>
+        </div>
 
-            <div class="skill-icon">
-              <i class="fab fa-docker fa-4x" aria-hidden="true"></i>
-              <p>Docker</p>
-            </div>
-
-            <div class="skill-icon">
-              <i class="fab fa-wordpress fa-4x" aria-hidden="true"></i>
-              <p>Wordpress</p>
-            </div>
-          </div>
+        <div class="col">
+          <i class="fab fa-wordpress fa-3x" aria-hidden="true"></i>
+          <p class="text-center">Wordpress</p>
         </div>
       </div>
     </div>
@@ -121,63 +124,80 @@
   <!-- about&skill -->
 
   <!-- hobby -->
-
-  <div class="bg03">
-    <div class="hobby">
-      <h1>Hobby</h1>
-      <p>子供のころからゲームが大好きです。<br>
-      下記が最近のお気に入りタイトルです。</p>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-         <div class="game col-xs-12 col-md-4 ">
-            <h2>PS4</h2>
-            <p>龍が如くシリーズ<br>
-              FFシリーズ<br>
-          DQシリーズ<br>
-          Marvel's Spider-man
-        </p>
-      </div>
-      <div class="game col-xs-12 col-md-4 ">
-        <h2>Switch</h2>
-        <p>ゼルダの伝説ブレスオブザワイルド<br>
-          テトリス99<br>
-        </div>
-        <div class="game col-xs-12 col-md-4 ">
-          <h2>Social</h2>
-          <p>FFBE<br>
-            ドッカンバトル</p>
-          </div>
-        </div>
-      </div>
-
-  <!-- future -->
-
-  <div class="bg04">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="future col-xs-12 col-md-6 ">
-          <h1>Want</h1>
-            <p>学習しているプログラミングを使い、<br>
-              色々な働き方を探してみたいと考えています。<br>
-              まずは休日や業務後を利用しての週10時間程度の副業を始めて行きたいです。
-            </p>
-        </div>
-
-        <div class="future col-xs-12 col-md-6 ">
-          <h1>Challenge</h1>
-          <p>HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
-            コロナ禍における環境変化のため、<br>
-            本業でも営業の在り方そのものを、<br>
-            パラダイムシフト出来るよう考え方を改造していきたいです。<br>
-            11月に第一子が生まれる予定のため、育児関係も勉強しています。
-          </p>
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-12  mt-5 text-center">
+      <h1 id="hobby">Hobby</h1>
+      <p class="mt-3">子供のころからゲームが大好きです。<br>
+        下記が最近のお気に入りタイトルです。</p>
     </div>
   </div>
 
+  <div class="row justify-content-center">
+      <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+        <h2>PS4</h2>
+        <p>龍が如くシリーズ<br>
+        FFシリーズ<br>
+        DQシリーズ<br>
+        Marvel's Spider-man</p>
+    </div>
 
+    <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+      <h2>Switch</h2>
+      <p>ゼルダの伝説 BotW<br>
+      テトリス99<br></p>
+    </div>
+
+    <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+      <h2>Social</h2>
+      <p>FFBE<br>
+      ドッカンバトル</p>
+    </div>
+  </div>
+
+  <!-- want-challenge -->
+
+  <div class="row">
+    <div class="col-xs-12 col-md-6 mt-5">
+      <h1 id="want-challenge">Want</h1>
+        <p class="mt-3">学習しているプログラミングを使い、<br>
+          色々な働き方を探してみたいと考えています。<br>
+          まずは休日や業務後を利用しての週10時間程度の副業を始めて行きたいです。</p>
+    </div>
+
+    <div class="col-xs-12 col-md-6 mt-5">
+      <h1>Challenge</h1>
+      <p class="mt-3">HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
+        コロナ禍における環境変化のため、<br>
+        本業でも営業の在り方そのものを、<br>
+        パラダイムシフト出来るよう考え方を改造していきたいです。<br>
+        11月に第一子が生まれる予定のため、育児関係も勉強しています。</p>
+     </div>
+  </div>
+  <!-- future -->
+
+  <!-- contact -->
+  <h1 id="contact" class="mt-5">Contact</h1>
+  <form class="mt-3">
+    <div class="form-group">
+      <label for="formGroupExampleInput">お名前</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="お名前を入力してください。">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput2">メールアドレス</label>
+      <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="メールアドレスを入力してください。">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput2">件名</label>
+      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="件名を入力してください。">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput2">本文</label>
+      <textarea rows="3" cols="40" class="form-control" id="formGroupExampleInput2" placeholder="本文を入力してください。"></textarea>
+    </div>
+    <button type="button" class="btn btn-primary">送信</button>
+  </form>
+  <!-- contact -->
+</div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
