ワイヤーフレーム（高さ / 背景色 / コンタクトフォームのrow設定）

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="container">
 
   <!-- name -->
-  <div class="row">
+  <div class="row min-vh-100 bg-light">
     <div class="col-12">
       <h1 id="home" class="text-center display-1">Hiroaki Nishizawa</h1>
     </div>
@@ -65,7 +65,7 @@
 
   <!-- about&skill -->
 
-  <div class="row">
+  <div class="row min-vh-100 bg-secondary">
     <div class="col-xs-12 col-md-6 mt-5">
       <h1 id="about-skill">About</h1>
         <p class="mt-3">エンジニアとしては未経験ですが、<br>
@@ -124,15 +124,15 @@
   <!-- about&skill -->
 
   <!-- hobby -->
-  <div class="row">
-    <div class="col-12  mt-5 text-center">
+  <div class="row bg-light">
+    <div class="col-12 text-center">
       <h1 id="hobby">Hobby</h1>
       <p class="mt-3">子供のころからゲームが大好きです。<br>
         下記が最近のお気に入りタイトルです。</p>
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center pb-5 bg-light">
       <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
         <h2>PS4</h2>
         <p>龍が如くシリーズ<br>
@@ -156,15 +156,15 @@
 
   <!-- want-challenge -->
 
-  <div class="row">
-    <div class="col-xs-12 col-md-6 mt-5">
+  <div class="row bg-secondary">
+    <div class="col-xs-12 col-md-6 pb-5">
       <h1 id="want-challenge">Want</h1>
         <p class="mt-3">学習しているプログラミングを使い、<br>
           色々な働き方を探してみたいと考えています。<br>
           まずは休日や業務後を利用しての週10時間程度の副業を始めて行きたいです。</p>
     </div>
 
-    <div class="col-xs-12 col-md-6 mt-5">
+    <div class="col-xs-12 col-md-6 pb-5">
       <h1>Challenge</h1>
       <p class="mt-3">HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
         コロナ禍における環境変化のため、<br>
@@ -176,26 +176,38 @@
   <!-- future -->
 
   <!-- contact -->
-  <h1 id="contact" class="mt-5">Contact</h1>
-  <form class="mt-3">
-    <div class="form-group">
-      <label for="formGroupExampleInput">お名前</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="お名前を入力してください。">
+  <div class="row bg-light">
+    <div class="col-12">
+      <h1 id="contact">Contact</h1>
     </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">メールアドレス</label>
-      <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="メールアドレスを入力してください。">
-    </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">件名</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="件名を入力してください。">
-    </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">本文</label>
-      <textarea rows="3" cols="40" class="form-control" id="formGroupExampleInput2" placeholder="本文を入力してください。"></textarea>
-    </div>
-    <button type="button" class="btn btn-primary">送信</button>
-  </form>
+    <form class="col-12">
+      <div class="form-row">
+        <div class="form-group col">
+          <label for="formGroupExampleInput">お名前</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="お名前を入力してください。">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col">
+          <label for="formGroupExampleInput2">メールアドレス</label>
+          <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="メールアドレスを入力してください。">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col">
+          <label for="formGroupExampleInput2">件名</label>
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="件名を入力してください。">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col">
+          <label for="formGroupExampleInput2">本文</label>
+          <textarea rows="3" cols="40" class="form-control" id="formGroupExampleInput2" placeholder="本文を入力してください。"></textarea>
+        </div>
+      </div>
+      <button type="button" class="btn btn-primary">送信</button>
+    </form>
+  </div>
   <!-- contact -->
 </div>
 
