ワイヤーフレーム（行間 / アイコン配置 / 背景px修正）

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Corben:700" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link href="css/style2.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#Navbar">
@@ -47,9 +48,9 @@
 <div class="container">
 
   <!-- name -->
-  <div class="row min-vh-100 bg-light">
+  <div class="row bg-01 bg-light">
     <div class="col-12">
-      <h1 id="home" class="text-center display-1">Hiroaki Nishizawa</h1>
+      <h1 id="home" class="text-center display-1 mt-5">Hiroaki Nishizawa</h1>
     </div>
     <div class="col-12">
       <h2 class="text-center display-4">Welcome To My Homepage</h2>
@@ -65,10 +66,10 @@
 
   <!-- about&skill -->
 
-  <div class="row min-vh-100 bg-secondary">
+  <div class="row bg-02 bg-secondary">
     <div class="col-xs-12 col-md-6 mt-5">
       <h1 id="about-skill">About</h1>
-        <p class="mt-3">エンジニアとしては未経験ですが、<br>
+        <p class="mt-3 line-heihgt">エンジニアとしては未経験ですが、<br>
           現在プログラミングスクールにてHTML・CSS・PHPを中心に学習中です。<br>
           また、Wordpressにて個人ブログも運営しています。<br>
           本業では新卒で専門商社に入社して以降、営業に携わっています。<br>
@@ -85,35 +86,35 @@
 
     <div class="col-xs-12 col-md-6 mt-5">
       <h1 id="skill">Skill</h1>
-      <p class="mt-3">☆HTML・CSSコーディング / PHP /  Docker / Bootstrap4 / Wordpress制作・導入☆<br>
+      <p class="mt-3 line-heihgt">☆HTML・CSSコーディング / PHP /  Docker / Bootstrap4 / Wordpress制作・導入☆<br>
       ☆コミュニケーションスキル / ヒアリングスキル / 顧客志向 from 営業☆<br>
       ☆周囲を見るスキル / 他者と協調・調和するスキル from 競技ダンス☆
       </p>
 
       <div class="row justify-content-center">
-        <div class="col">
+        <div class="col text-center">
           <i class="fab fa-html5 fa-3x" aria-hidden="true"></i>
           <p class="text-center">HTML5</p>
         </div>
 
-        <div class="col">
+        <div class="col text-center">
           <i class="fab fa-css3-alt fa-3x " aria-hidden="true"></i>
           <p class="text-center">CSS3</p>
         </div>
 
         <!-- <i class="fab fa-bootstrap fa-5x" aria-hidden="true"></i> -->
 
-        <div class="col">
+        <div class="col text-center">
           <i class="fab fa-php fa-3x" aria-hidden="true"></i>
           <p class="text-center">PHP</p>
         </div>
 
-        <div class="col">
+        <div class="col text-center">
           <i class="fab fa-docker fa-3x" aria-hidden="true"></i>
           <p class="text-center">Docker</p>
         </div>
 
-        <div class="col">
+        <div class="col text-center">
           <i class="fab fa-wordpress fa-3x" aria-hidden="true"></i>
           <p class="text-center">Wordpress</p>
         </div>
@@ -124,16 +125,16 @@
   <!-- about&skill -->
 
   <!-- hobby -->
-  <div class="row bg-light">
+  <div class="row bg-03 bg-light py-5">
     <div class="col-12 text-center">
       <h1 id="hobby">Hobby</h1>
-      <p class="mt-3">子供のころからゲームが大好きです。<br>
+      <p class="mt-3 line-heihgt">子供のころからゲームが大好きです。<br>
         下記が最近のお気に入りタイトルです。</p>
     </div>
   </div>
 
-  <div class="row justify-content-center pb-5 bg-light">
-      <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+  <div class="row bg-03 justify-content-center pb-5 bg-light">
+      <div class="col-xs-12 col-md-3 border rounded mt-2 mx-2">
         <h2>PS4</h2>
         <p>龍が如くシリーズ<br>
         FFシリーズ<br>
@@ -141,13 +142,13 @@
         Marvel's Spider-man</p>
     </div>
 
-    <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+    <div class="col-xs-12 col-md-auto border rounded mt-2 mx-2">
       <h2>Switch</h2>
-      <p>ゼルダの伝説 BotW<br>
+      <p>ゼルダの伝説 ブレスオブザワイルド<br>
       テトリス99<br></p>
     </div>
 
-    <div class="col-xs-12 col-md-3 border rounded mt-2 mr-4">
+    <div class="col-xs-12 col-md-3 border rounded mt-2 mx-2">
       <h2>Social</h2>
       <p>FFBE<br>
       ドッカンバトル</p>
@@ -156,17 +157,17 @@
 
   <!-- want-challenge -->
 
-  <div class="row bg-secondary">
+  <div class="row bg-04 bg-secondary">
     <div class="col-xs-12 col-md-6 pb-5">
       <h1 id="want-challenge">Want</h1>
-        <p class="mt-3">学習しているプログラミングを使い、<br>
+        <p class="mt-3 line-heihgt">学習しているプログラミングを使い、<br>
           色々な働き方を探してみたいと考えています。<br>
           まずは休日や業務後を利用しての週10時間程度の副業を始めて行きたいです。</p>
     </div>
 
     <div class="col-xs-12 col-md-6 pb-5">
       <h1>Challenge</h1>
-      <p class="mt-3">HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
+      <p class="mt-3 line-heihgt">HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
         コロナ禍における環境変化のため、<br>
         本業でも営業の在り方そのものを、<br>
         パラダイムシフト出来るよう考え方を改造していきたいです。<br>
