--- a/index.html
+++ b/index.html
@@ -47,28 +47,30 @@
 
 <div class="container">
 
-  <!-- name -->
-  <div class="row bg-01 bg-light">
+  <!-- home -->
+
+  <div id="home" class="row">
     <div class="col-12">
-      <h1 id="home" class="text-center display-1 mt-5">Hiroaki Nishizawa</h1>
+      <h1 class="text-center">Hiroaki Nishizawa <br>
+      <span>Welcome To My Homepage</span></h1>
     </div>
-    <div class="col-12">
-      <h2 class="text-center display-4">Welcome To My Homepage</h2>
-    </div>
-    <div class="col-12 text-right">
-      <i class="fab fa-facebook-square fa-3x mr-2" aria-hidden="true"></i>
-      <i class="fab fa-twitter-square fa-3x mr-2" aria-hidden="true"></i>
-      <i class="fab fa-blogger fa-3x" aria-hidden="true"></i>
+    <div class="col-12 text-right my-5">
+      <a href="https://google.com" target="blank">
+      <i class="fab fa-facebook-square fa-3x mr-2" aria-hidden="true"></i></a>
+      <a href="https://google.com" target="blank">
+      <i class="fab fa-twitter-square fa-3x mr-2" aria-hidden="true"></i></a>
+      <a href="https://doria-room.com/" target="blank">
+      <i class="fab fa-blogger fa-3x" aria-hidden="true"></i></a>
     </div>
   </div>
 
-  <!-- name -->
+  <!-- home -->
 
   <!-- about&skill -->
 
-  <div class="row bg-02 bg-secondary">
-    <div class="col-xs-12 col-md-6 mt-5">
-      <h1 id="about-skill">About</h1>
+  <div  id="about-skill" class="row">
+    <div class="col-xs-12 col-md-6 mt-3">
+      <h1>About</h1>
         <p class="mt-3 line-heihgt">エンジニアとしては未経験ですが、<br>
           現在プログラミングスクールにてHTML・CSS・PHPを中心に学習中です。<br>
           また、Wordpressにて個人ブログも運営しています。<br>
@@ -79,42 +81,43 @@
           非常に多忙なお医者様とコミュニケーションの中からニーズをお聞きし、<br>
           情報提供活動をしています。<br>
           学生時代は競技ダンス(社交ダンス)を4年間続けました。<br>
-          周囲の状況を確認しつつ、常にパートナー（他者）のことを考えなければならない競技です。<br>
+          周囲の状況を確認しつつ、<br>
+          常にパートナー（他者）のことを考えなければならない競技です。<br>
           大分鈍りましたが、今でもちょっとなら踊れます！
         </p>
     </div>
 
-    <div class="col-xs-12 col-md-6 mt-5">
-      <h1 id="skill">Skill</h1>
+    <div class="col-xs-12 col-md-6 mt-3">
+      <h1>Skill</h1>
       <p class="mt-3 line-heihgt">☆HTML・CSSコーディング / PHP /  Docker / Bootstrap4 / Wordpress制作・導入☆<br>
       ☆コミュニケーションスキル / ヒアリングスキル / 顧客志向 from 営業☆<br>
       ☆周囲を見るスキル / 他者と協調・調和するスキル from 競技ダンス☆
       </p>
 
       <div class="row justify-content-center">
-        <div class="col text-center">
+        <div class="col-auto text-center">
           <i class="fab fa-html5 fa-3x" aria-hidden="true"></i>
           <p class="text-center">HTML5</p>
         </div>
 
-        <div class="col text-center">
+        <div class="col-auto text-center">
           <i class="fab fa-css3-alt fa-3x " aria-hidden="true"></i>
           <p class="text-center">CSS3</p>
         </div>
 
         <!-- <i class="fab fa-bootstrap fa-5x" aria-hidden="true"></i> -->
 
-        <div class="col text-center">
+        <div class="col-auto text-center">
           <i class="fab fa-php fa-3x" aria-hidden="true"></i>
           <p class="text-center">PHP</p>
         </div>
 
-        <div class="col text-center">
+        <div class="col-auto text-center">
           <i class="fab fa-docker fa-3x" aria-hidden="true"></i>
           <p class="text-center">Docker</p>
         </div>
 
-        <div class="col text-center">
+        <div class="col-auto text-center">
           <i class="fab fa-wordpress fa-3x" aria-hidden="true"></i>
           <p class="text-center">Wordpress</p>
         </div>
@@ -125,47 +128,49 @@
   <!-- about&skill -->
 
   <!-- hobby -->
-  <div class="row bg-03 bg-light py-5">
-    <div class="col-12 text-center">
-      <h1 id="hobby">Hobby</h1>
-      <p class="mt-3 line-heihgt">子供のころからゲームが大好きです。<br>
+
+  <div  id="hobby" class="row align-middle">
+    <div class="col-12 text-center pt-5">
+      <h1>Hobby</h1>
+      <p class="mt-3 line-heihgt">
+        子供のころからゲームが大好きです。<br>
         下記が最近のお気に入りタイトルです。</p>
     </div>
-  </div>
 
-  <div class="row bg-03 justify-content-center pb-5 bg-light">
+    <div class="games row col-12 justify-content-center pb-5">
       <div class="col-xs-12 col-md-3 border rounded mt-2 mx-2">
         <h2>PS4</h2>
         <p>龍が如くシリーズ<br>
         FFシリーズ<br>
         DQシリーズ<br>
         Marvel's Spider-man</p>
-    </div>
+      </div>
 
-    <div class="col-xs-12 col-md-auto border rounded mt-2 mx-2">
-      <h2>Switch</h2>
-      <p>ゼルダの伝説 ブレスオブザワイルド<br>
-      テトリス99<br></p>
-    </div>
+      <div class="col-xs-12 col-md-auto border rounded mt-2 mx-2">
+        <h2>Switch</h2>
+        <p>ゼルダの伝説 ブレスオブザワイルド<br>
+        テトリス99<br></p>
+      </div>
 
-    <div class="col-xs-12 col-md-3 border rounded mt-2 mx-2">
-      <h2>Social</h2>
-      <p>FFBE<br>
-      ドッカンバトル</p>
+      <div class="col-xs-12 col-md-3 border rounded mt-2 mx-2">
+        <h2>Social</h2>
+        <p>FFBE<br>
+        ドッカンバトル</p>
+      </div>
     </div>
   </div>
 
   <!-- want-challenge -->
 
-  <div class="row bg-04 bg-secondary">
-    <div class="col-xs-12 col-md-6 pb-5">
-      <h1 id="want-challenge">Want</h1>
+  <div  id="want-challenge" class="row">
+    <div class="col-xs-12 col-md-6 mt-3">
+      <h1>Want</h1>
         <p class="mt-3 line-heihgt">学習しているプログラミングを使い、<br>
           色々な働き方を探してみたいと考えています。<br>
           まずは休日や業務後を利用しての週10時間程度の副業を始めて行きたいです。</p>
     </div>
 
-    <div class="col-xs-12 col-md-6 pb-5">
+    <div class="col-xs-12 col-md-6 mt-3">
       <h1>Challenge</h1>
       <p class="mt-3 line-heihgt">HTML・CSSコーディング、PHP、Dockerを中心に学習中です。<br>
         コロナ禍における環境変化のため、<br>
@@ -177,9 +182,9 @@
   <!-- future -->
 
   <!-- contact -->
-  <div class="row bg-light">
+  <div  id="contact" class="row bg-light">
     <div class="col-12">
-      <h1 id="contact">Contact</h1>
+      <h1>Contact</h1>
     </div>
     <form class="col-12">
       <div class="form-row">
