--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>自己紹介ワイヤーフレーム</title>
+  <title>My Profile Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Corben:700" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link href="css/style2.css" rel="stylesheet">
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
-<body data-spy="scroll" data-target="#Navbar">
+<body data-spy="scroll" data-target="#Navbar" data-offset="200">
 
     <!-- NavBar -->
     <nav id="Navbar"class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -183,44 +184,45 @@
 
   <!-- contact -->
   <div  id="contact" class="row bg-light">
-    <div class="col-12">
+    <div class="col-12 align-middle">
       <h1>Contact</h1>
     </div>
-    <form class="col-12">
-      <div class="form-row">
-        <div class="form-group col">
-          <label for="formGroupExampleInput">お名前</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="お名前を入力してください。">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col">
-          <label for="formGroupExampleInput2">メールアドレス</label>
-          <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="メールアドレスを入力してください。">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col">
-          <label for="formGroupExampleInput2">件名</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="件名を入力してください。">
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col">
-          <label for="formGroupExampleInput2">本文</label>
-          <textarea rows="3" cols="40" class="form-control" id="formGroupExampleInput2" placeholder="本文を入力してください。"></textarea>
-        </div>
-      </div>
-      <button type="button" class="btn btn-primary">送信</button>
-    </form>
+    <div class="col-12 align-middle">
+      <p>下記アドレスからご連絡下さい。</p>
+    </div>
+    <div class="col-12">
+      <a href="mailto:doria77777@yahoo.co.jp">doria77777@yahoo.co.jp</a>
+    </div>
+    <div class="col-12 align-middle">
+      <p>色々な事、お手伝いさせて頂きたいです。<br>
+        まだまだ未熟ですが、精一杯勉強してお役に立ちます。<br>
+        よろしくお願い致します！
+      </p>
+    </div>
   </div>
-  <!-- contact -->
 </div>
+  <!-- contact -->
+
+  <!-- footer -->
+
+<div class="container-fluid">
+  <footer>
+    <div class="row footer">
+      <div class="col-12">
+        <p class="text-center">©Copyright Hiroaki Nishizawa , 2020 All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
+</div>
+  <!-- footer -->
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="js/jquery.3.5.1.js"></script>
   <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
