自己紹介サイト（名前変更）

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div id="home" class="row">
     <div class="col-12">
-      <h1 class="text-center">Hiroaki Nishizawa <br>
+      <h1 class="text-center">doria<br>
       <span>Welcome To My Homepage</span></h1>
     </div>
     <div class="col-12 text-right my-5">
